--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "less-loader": "^6.0.0",
+    "vant": "^2.12.30",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -27,8 +31,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^4.1.2",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
+    "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
